// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InventoryListHelpers applyConfigProperty should determine if filter property is valid and return it or undefined: prop invalid, null 1`] = `undefined`;

exports[`InventoryListHelpers applyConfigProperty should determine if filter property is valid and return it or undefined: prop valid, function 1`] = `"ipsum"`;

exports[`InventoryListHelpers applyConfigProperty should determine if filter property is valid and return it or undefined: prop valid, number 1`] = `1000`;

exports[`InventoryListHelpers applyConfigProperty should determine if filter property is valid and return it or undefined: prop valid, string 1`] = `"hello world"`;

exports[`InventoryListHelpers applySortFilters should apply and return updated filters for table sorting: NOT sortable 1`] = `
{
  "id": "lorem",
  "isSortable": false,
}
`;

exports[`InventoryListHelpers applySortFilters should apply and return updated filters for table sorting: sortable 1`] = `
{
  "id": "lorem",
  "isSortable": true,
  "onSort": [Function],
}
`;

exports[`InventoryListHelpers applySortFilters should apply and return updated filters for table sorting: sortable, active column 1`] = `
{
  "id": "lorem",
  "isSortable": true,
  "onSort": [Function],
  "sortActive": true,
  "sortDirection": "asc",
}
`;

exports[`InventoryListHelpers applySortFilters should apply and return updated filters for table sorting: sortable, direction 1`] = `
{
  "ascending": {
    "id": "lorem",
    "isSortable": true,
    "onSort": [Function],
    "sortDirection": "asc",
  },
  "descending": {
    "id": "lorem",
    "isSortable": true,
    "onSort": [Function],
    "sortDirection": "desc",
  },
}
`;

exports[`InventoryListHelpers applySortFilters should apply and return updated filters for table sorting: sortable, set a default field 1`] = `
{
  "id": "lorem",
  "isSortDefault": true,
  "isSortable": true,
  "onSort": [Function],
  "sortActive": true,
  "sortDefaultInitialDirection": "lorem",
  "sortDirection": "lorem",
}
`;

exports[`InventoryListHelpers applyWrappableFilters should apply and return updated filters for table header wrapping: NOT wrappable header 1`] = `
[
  {
    "id": "lorem",
    "isWrappable": false,
  },
]
`;

exports[`InventoryListHelpers applyWrappableFilters should apply and return updated filters for table header wrapping: append/push a wrappable transform 1`] = `
{
  "id": "lorem",
  "isWrappable": true,
  "transforms": [
    "lorem",
    [Function],
  ],
}
`;

exports[`InventoryListHelpers applyWrappableFilters should apply and return updated filters for table header wrapping: apply default wrappable transform 1`] = `
{
  "id": "lorem",
  "isWrappable": true,
  "transforms": [
    [Function],
  ],
}
`;

exports[`InventoryListHelpers applyWrappableFilters should apply and return updated filters for table header wrapping: wrappable header 1`] = `
[
  {
    "id": "lorem",
    "isWrappable": true,
    "transforms": [
      [Function],
    ],
  },
]
`;

exports[`InventoryListHelpers parseInventoryFilters should parse and return updated filters for table cells: NOT sortable 1`] = `
[
  {
    "id": "lorem",
    "isSortable": false,
  },
]
`;

exports[`InventoryListHelpers parseInventoryFilters should parse and return updated filters for table cells: sortable 1`] = `
[
  {
    "id": "lorem",
    "isSortable": true,
    "onSort": [Function],
  },
]
`;

exports[`InventoryListHelpers parseRowCellsListData should parse and return formatted/filtered table cells.: basic cell data 1`] = `
{
  "cells": [
    "ipsum",
    "sit",
  ],
  "columnHeaders": [
    "t(curiosity-inventory.header, {"context":"lorem"})",
    "t(curiosity-inventory.header, {"context":"dolor"})",
  ],
  "data": {
    "dolor": {
      "title": "t(curiosity-inventory.header, {"context":"dolor"})",
      "value": "sit",
    },
    "lorem": {
      "title": "t(curiosity-inventory.header, {"context":"lorem"})",
      "value": "ipsum",
    },
  },
}
`;

exports[`InventoryListHelpers parseRowCellsListData should parse and return formatted/filtered table cells.: basic standalone data 1`] = `
{
  "cells": [
    {
      "title": "world",
    },
  ],
  "columnHeaders": [
    {
      "title": "hello",
      "transforms": [],
    },
  ],
  "data": {
    "dolor": {
      "title": "t(curiosity-inventory.header, {"context":"dolor"})",
      "value": "sit",
    },
    "lorem": {
      "title": "t(curiosity-inventory.header, {"context":"lorem"})",
      "value": "ipsum",
    },
  },
}
`;

exports[`InventoryListHelpers parseRowCellsListData should parse and return formatted/filtered table cells.: custom and generated transforms 1`] = `
{
  "cells": [
    {
      "title": "ipsum",
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header, {"context":"lorem"})",
      "transforms": [
        [Function],
        [Function],
      ],
    },
  ],
  "data": {
    "dolor": {
      "title": "t(curiosity-inventory.header, {"context":"dolor"})",
      "value": "sit",
    },
    "lorem": {
      "title": "t(curiosity-inventory.header, {"context":"lorem"})",
      "value": "ipsum",
    },
  },
}
`;

exports[`InventoryListHelpers parseRowCellsListData should parse and return formatted/filtered table cells.: custom callback data 1`] = `
{
  "cells": [
    {
      "title": "ipsum/sit",
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header, {"context":"lorem"})/t(curiosity-inventory.header, {"context":"dolor"})",
      "transforms": [],
    },
  ],
  "data": {
    "dolor": {
      "title": "t(curiosity-inventory.header, {"context":"dolor"})",
      "value": "sit",
    },
    "lorem": {
      "title": "t(curiosity-inventory.header, {"context":"lorem"})",
      "value": "ipsum",
    },
  },
}
`;

exports[`InventoryListHelpers parseRowCellsListData should parse and return formatted/filtered table cells.: custom cell data 1`] = `
{
  "cells": [
    {
      "props": {
        "textCenter": true,
      },
      "title": "object, cell, lorem",
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header, {"context":"lorem"})",
      "transforms": [],
    },
  ],
  "data": {
    "dolor": {
      "title": "t(curiosity-inventory.header, {"context":"dolor"})",
      "value": "sit",
    },
    "lorem": {
      "title": "t(curiosity-inventory.header, {"context":"lorem"})",
      "value": "ipsum",
    },
  },
}
`;

exports[`InventoryListHelpers parseRowCellsListData should parse and return formatted/filtered table cells.: custom cell tooltips 1`] = `
{
  "cells": [
    {
      "title": <Tooltip
        content="tooltip body content"
        distance={5}
        enableFlip={false}
        entryDelay={100}
        exitDelay={0}
        isNoWrap={false}
        position="top"
      >
        object, body, lorem
      </Tooltip>,
    },
  ],
  "columnHeaders": [
    {
      "title": <Tooltip
        content="tooltip header content"
        distance={5}
        enableFlip={false}
        entryDelay={100}
        exitDelay={0}
        isNoWrap={false}
        position="top"
      >
        object, header, lorem
      </Tooltip>,
      "transforms": [],
    },
  ],
  "data": {
    "dolor": {
      "title": "t(curiosity-inventory.header, {"context":"dolor"})",
      "value": "sit",
    },
    "lorem": {
      "title": "t(curiosity-inventory.header, {"context":"lorem"})",
      "value": "ipsum",
    },
  },
}
`;

exports[`InventoryListHelpers parseRowCellsListData should parse and return formatted/filtered table cells.: custom cell, hide cell and column header if data is missing 1`] = `
{
  "cells": [],
  "columnHeaders": [],
  "data": {},
}
`;

exports[`InventoryListHelpers parseRowCellsListData should parse and return formatted/filtered table cells.: custom cell, use an empty cell if data is missing 1`] = `
{
  "cells": [
    {
      "title": "",
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header, {"context":"missing"})",
      "transforms": [],
    },
  ],
  "data": {
    "hello": {
      "title": "t(curiosity-inventory.header, {"context":"hello"})",
      "value": "world",
    },
  },
}
`;

exports[`InventoryListHelpers parseRowCellsListData should parse and return formatted/filtered table cells.: custom header data 1`] = `
{
  "cells": [
    {
      "title": "ipsum",
    },
  ],
  "columnHeaders": [
    {
      "props": {
        "textCenter": true,
      },
      "title": "object, header, lorem",
      "transforms": [],
    },
  ],
  "data": {
    "dolor": {
      "title": "t(curiosity-inventory.header, {"context":"dolor"})",
      "value": "sit",
    },
    "lorem": {
      "title": "t(curiosity-inventory.header, {"context":"lorem"})",
      "value": "ipsum",
    },
  },
}
`;

exports[`InventoryListHelpers parseRowCellsListData should parse and return formatted/filtered table cells.: custom sort 1`] = `
{
  "cells": [
    {
      "title": "ipsum",
    },
  ],
  "columnHeaders": [
    {
      "onSort": [Function],
      "sortActive": undefined,
      "sortDirection": undefined,
      "title": "header, lorem sort",
      "transforms": [],
    },
  ],
  "data": {
    "dolor": {
      "title": "t(curiosity-inventory.header, {"context":"dolor"})",
      "value": "sit",
    },
    "lorem": {
      "title": "t(curiosity-inventory.header, {"context":"lorem"})",
      "value": "ipsum",
    },
  },
}
`;

exports[`InventoryListHelpers parseRowCellsListData should parse and return formatted/filtered table cells.: custom standalone data 1`] = `
{
  "cells": [
    {
      "title": "custom ipsum/sit",
    },
  ],
  "columnHeaders": [
    {
      "title": "custom t(curiosity-inventory.header, {"context":"lorem"})/t(curiosity-inventory.header, {"context":"dolor"})",
      "transforms": [],
    },
  ],
  "data": {
    "dolor": {
      "title": "t(curiosity-inventory.header, {"context":"dolor"})",
      "value": "sit",
    },
    "lorem": {
      "title": "t(curiosity-inventory.header, {"context":"lorem"})",
      "value": "ipsum",
    },
  },
}
`;

exports[`InventoryListHelpers parseRowCellsListData should parse and return formatted/filtered table cells.: custom transforms 1`] = `
{
  "cells": [
    {
      "title": "ipsum",
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header, {"context":"lorem"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "dolor": {
      "title": "t(curiosity-inventory.header, {"context":"dolor"})",
      "value": "sit",
    },
    "lorem": {
      "title": "t(curiosity-inventory.header, {"context":"lorem"})",
      "value": "ipsum",
    },
  },
}
`;

exports[`InventoryListHelpers parseRowCellsListData should parse and return formatted/filtered table cells.: filtered data 1`] = `
{
  "cells": [
    {
      "title": "ipsum",
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header, {"context":"lorem"})",
      "transforms": [],
    },
  ],
  "data": {
    "dolor": {
      "title": "t(curiosity-inventory.header, {"context":"dolor"})",
      "value": "sit",
    },
    "lorem": {
      "title": "t(curiosity-inventory.header, {"context":"lorem"})",
      "value": "ipsum",
    },
  },
}
`;

exports[`InventoryListHelpers parseRowCellsListData should parse and return formatted/filtered table cells.: generated transforms 1`] = `
{
  "cells": [
    {
      "title": "ipsum",
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header, {"context":"lorem"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "dolor": {
      "title": "t(curiosity-inventory.header, {"context":"dolor"})",
      "value": "sit",
    },
    "lorem": {
      "title": "t(curiosity-inventory.header, {"context":"lorem"})",
      "value": "ipsum",
    },
  },
}
`;

exports[`InventoryListHelpers should have specific functions: inventoryListHelpers 1`] = `
{
  "applyConfigProperty": [Function],
  "applyHeaderRowCellFilters": [Function],
  "applySortFilters": [Function],
  "applyWrappableFilters": [Function],
  "parseInventoryFilters": [Function],
  "parseRowCellsListData": [Function],
}
`;
